--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,49 +3,40 @@
   <div class="fixed top-0 z-20 bg-primario h-auto w-screen">
     <!-- NAVBAR -->
     <nav
-      class="font-inter mx-auto h-16 w-full max-w-[1600px] lg:relative lg:top-0"
+      class="font-inter mx-auto h-16 w-full lg:relative lg:top-0"
       x-data="{isOpen: false, menuOne:false}"
     >
       <!-- CONTAINER -->
       <div
-        class="flex px-6 py-6 lg:flex-row lg:items-center lg:justify-between lg:px-10 lg:py-0 xl:px-20"
+        class="flex px-6 py-2 lg:flex-row items-center justify-between lg:px-10 lg:py-0 xl:px-20"
       >
         <!-- SVG LOGO - YOU CAN REPLACE THIS -->
         <a href="/">
           <img
-            class="size-16 object-contain py-0"
+            class="size-12 lg:size-16 object-contain py-0"
             src="/logos/logo5.svg"
             alt=""
           />
+        </a>    
+        <div>
+          
+          <a
+            href="#"
+            class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
+            ><img class="size-8 lg:size-10 transition-all hover:scale-110" src="/logos/instagram.svg" alt="" />
+          </a>
+          <a
+          href="#"
+          class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
+          ><img class="size-8 lg:size-10 transition-all hover:scale-110" src="/logos/facebook.svg" alt="" />
         </a>
-        <!-- MENU CONTENT 1 -->
-        <!-- <div
-          class="mt-14 flex flex-col space-y-8 lg:mt-0 lg:flex lg:flex-row lg:space-x-1 lg:space-y-0"
-          x-bind:class="isOpen ? 'show' : 'hidden'"
-        >
-          <a
-            href="#"
-            class="font-inter rounded-lg lg:px-6 lg:py-4 lg:hover:bg-gray-50 lg:hover:text-gray-800"
-            >Templates</a
-          >
-          <a
-            href="#"
-            class="font-inter rounded-lg lg:px-6 lg:py-4 lg:hover:bg-gray-50 lg:hover:text-gray-800"
-            >Pricing</a
-          >
-          <a
-            href="#"
-            class="font-inter rounded-lg pb-8 lg:px-6 lg:py-4 lg:pb-0 lg:hover:bg-gray-50 lg:hover:text-gray-800"
-            >FAQs</a
-          >
-        </div> -->
-        <!-- MENU CONTENT 2 -->
-
         <a
           href="#"
           class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
-          ><img class="size-12 transition-all hover:scale-110" src="/logos/linkedin.svg" alt="" />
+          ><img class="size-8 lg:size-10 transition-all hover:scale-110" src="/logos/linkedin.svg" alt="" />
         </a>
+          
+        </div>  
       </div>
     </nav>
   </div>
