--- a/src/components/Caracteristicas2.astro
+++ b/src/components/Caracteristicas2.astro
@@ -2,18 +2,16 @@
 import Card2 from "./Card2.astro";
 ---
 
-<section>
+<section id="fortalezas">
   <!-- Container -->
   <div class="mx-auto max-w-7xl px-5 py-16 md:px-10">
     <!-- Heading Div -->
     <div class="mx-auto w-full max-w-3xl text-center">
       <h2 class="text-3xl font-semibold md:text-5xl">
-        Te Presento Mis Capacidades y Soluciones
+        Mis Principales Fortalezas a tu servicio
       </h2>
       <div class="mx-auto mb-8 mt-4 max-w-[528px] md:mb-12 lg:mb-16">
-        <p class="text-[#636262]">
-          Contenidos que Capturan Tendencias y Conectan Audiencias
-        </p>
+        <p class="text-[#636262]"></p>
       </div>
     </div>
     <!-- Features Div -->
@@ -22,14 +20,17 @@ import Card2 from "./Card2.astro";
     >
       <!-- Feature Item -->
       <Card2
+        logo="/svgs/map.svg"
         titulo="Estrategia"
         texto="Equipada con las últimas técnicas en copywriting, ofrezco estrategias frescas y actualizadas diseñadas para no solo captar la atención, sino también para resaltar tu marca en un mercado siempre evolucionante."
       />
       <Card2
+        logo="/svgs/heart.svg"
         titulo="Pasión "
         texto="Mi pasión por el aprendizaje y una adaptabilidad sin igual se traducen en contenido que captura el interés y se mueve al ritmo de las tendencias cambiantes, asegurando que tu mensaje permanezca relevante y resonante."
       />
       <Card2
+        logo="/svgs/hands.svg"
         titulo="Compromiso"
         texto="Comprometida con la excelencia y el detalle, prometo una colaboración estrecha y personal, garantizando que cada palabra no solo refleje la esencia única de tu marca, sino que también toque directamente a quienes deseas alcanzar."
       />
