--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,7 +4,6 @@
     <!-- NAVBAR -->
     <nav
       class="font-inter mx-auto h-16 w-full lg:relative lg:top-0"
-      x-data="{isOpen: false, menuOne:false}"
     >
       <!-- CONTAINER -->
       <div
@@ -17,26 +16,30 @@
             src="/logos/logo5.svg"
             alt=""
           />
-        </a>    
+        </a>
         <div>
-          
           <a
-            href="#"
+            href="https://www.instagram.com/copynegrosobreblanco?igsh=OGlwd2l0NGh5OGcx"
+            target="_blank"
             class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
-            ><img class="size-8 lg:size-10 transition-all hover:scale-110" src="/logos/instagram.svg" alt="" />
+            ><img
+              class="size-8 lg:size-10 transition-all hover:scale-110"
+              src="/logos/instagram.svg"
+              alt=""
+            />
           </a>
+      
           <a
-          href="#"
-          class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
-          ><img class="size-8 lg:size-10 transition-all hover:scale-110" src="/logos/facebook.svg" alt="" />
-        </a>
-        <a
-          href="#"
-          class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
-          ><img class="size-8 lg:size-10 transition-all hover:scale-110" src="/logos/linkedin.svg" alt="" />
-        </a>
-          
-        </div>  
+            href="https://www.linkedin.com/in/lydia-blanch-nieto-66412a304?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            target="_blank"
+            class="inline-block rounded-xl border border-primario text-center font-semibold text-negro"
+            ><img
+              class="size-8 lg:size-10 transition-all hover:scale-110"
+              src="/logos/linkedin.svg"
+              alt=""
+            />
+          </a>
+        </div>
       </div>
     </nav>
   </div>
