--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,10 @@
 ---
-import Caracteristicas from "../components/Caracteristicas.astro";
 import Caracteristicas2 from "../components/Caracteristicas2.astro";
-
-import Servicios from "../components/Servicios.astro";
 import Servicios2 from "../components/Servicios2.astro";
-
 import Hero from "../components/Hero.astro";
-
 import Layout from "../layouts/Layout.astro";
 import Procesos from "../components/Procesos.astro";
+import Footer from "../components/Footer.astro";
 const ancho = "lg:w-[1200px] mx-auto";
 ---
 
@@ -41,6 +37,7 @@ const ancho = "lg:w-[1200px] mx-auto";
 
     </div>
   </main>
+  <Footer/>
 </Layout>
 
 <style>
