--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<section>
+<section id="inicio">
   <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-20">
     <!-- <h1
       class="mb-4 text-4xl font-semibold tracking-tight leading-none text-blanco md:text-5xl lg:text-6xl"
@@ -21,11 +21,11 @@
       class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0"
     >
       <a
-        href="#"
-        class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-negro rounded-lg bg-blanco transition-all [box-shadow:#A3C1AD_6px_6px] transform hover:scale-110"
+        href="/contacta"
+        class="inline-flex justify-center items-center py-3 px-6 text-base font-medium text-center text-negro rounded-lg bg-blanco transition-all [box-shadow:#A3C1AD_6px_6px] transform hover:scale-110"
       >
         Contacta
-       <!--  <svg
+        <svg
           class="w-3.5 h-3.5 ms-2 rtl:rotate-180"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
@@ -38,7 +38,7 @@
             stroke-linejoin="round"
             stroke-width="2"
             d="M1 5h12m0 0L9 1m4 4L9 9"></path>
-        </svg> -->
+        </svg>
       </a>
     </div>
   </div>
