--- a/src/components/Procesos.astro
+++ b/src/components/Procesos.astro
@@ -3,7 +3,7 @@ import Proceso from "./Proceso.astro";
 ---
 
 <!-- Section Integrations  -->
-<section>
+<section id="procesos">
   <!-- Container -->
   <div class="mx-auto max-w-7xl px-5 py-16 md:px-10">
     <!-- Title -->
@@ -24,19 +24,19 @@ import Proceso from "./Proceso.astro";
         titulo="FASE 2"
         subtitulo="Investigación Exhaustiva"
         texto="Para crear unos contenidos verdaderamente impactantes, dedicaré tiempo a investigar a tus competidores, la industria, tus clientes y sus expectativas. Este análisis nos permitirá identificar oportunidades clave en el mercado, lo que me ayudará a determinar las mejores estrategias de enfoque y las limitaciones a considerar"
-        imagen="typewriter"
+        imagen="searching"
       />
       <Proceso
         titulo="FASE 3"
         subtitulo="Entrega de Borradores"
         texto="Tras completar la investigación, ahora tengo claro cómo aplicar técnicas de copywriting para persuadir efectivamente. Es el momento de comenzar a redactar y transformar todas las ideas en textos convincentes. Te proporcionaré los primeros borradores dentro de los plazos acordados"
-        imagen="typewriter"
+        imagen="borrador"
       />
       <Proceso
         titulo="FASE 4"
         subtitulo="Revisión y Mejoras"
         texto="Una vez que hayas revisado los borradores, discutiremos todas tus ideas, cambios sugeridos y opiniones. Estoy aquí para escuchar tus comentarios y perfeccionar nuestro proyecto. Después de esta etapa de revisión, procederé a implementar todas las modificaciones acordadas para asegurar la entrega de un trabajo óptimo"
-        imagen="typewriter"
+        imagen="revision"
       />
     </div>
   </div>
