--- a/src/components/Servicio.astro
+++ b/src/components/Servicio.astro
@@ -1,5 +1,5 @@
 ---
-const { titulo, texto } = Astro.props;
+const { titulo, texto, logo } = Astro.props;
 ---
 
 <div class="flex flex-col p-2">
@@ -8,9 +8,9 @@ const { titulo, texto } = Astro.props;
     class="relative mb-4 flex h-14 w-14 flex-col items-center justify-center rounded-full border border-solid border-primario [box-shadow:#A3C1AD_0px_3px]"
   >
     <img
-      src="https://assets.website-files.com/63904f663019b0d8edf8d57c/639157f1a197859a6cd7f265_image%203.png"
+      src={logo}
       alt=""
-      class="relative z-[1] inline-block h-8"
+      class="relative z-[1] inline-block h-8 p-1"
     />
     <div
       class="absolute z-0 h-8 w-8 rounded-full border border-primario bg-primario"
