--- a/src/pages/contacta.astro
+++ b/src/pages/contacta.astro
@@ -2,18 +2,16 @@
 import DatosContactos from "../components/DatosContactos.astro";
 import FormContacto from "../components/FormContacto.astro";
 import Layout from "../layouts/Layout.astro";
-
 ---
 
 <Layout title="contacta">
-   <!-- <FormContacto/> -->
-   <h2 class="pt-4 text-4xl tracking-tight font-extrabold text-center text-blanco">Contacta conmigo</h2>
-<div class="p-4">
-
-    <DatosContactos/>
-</div>
-
+  <!-- <FormContacto/> -->
+  <div class="py-4 lg:py-4 px-4 mx-auto max-w-screen-md">
+    <h2 class="text-4xl tracking-tight font-extrabold text-center text-blanco">
+      Contacta conmigo
+    </h2>
+    <div class="pt-4">
+      <DatosContactos />
+    </div>
+  </div>
 </Layout>
-
-
-  
